--- a/package.json
+++ b/package.json
@@ -30,14 +30,14 @@
     "@angular/platform-browser": "5.1.0",
     "@angular/platform-browser-dynamic": "5.1.0",
     "@angular/router": "5.1.0",
+    "@ngrx/effects": "4.1.1",
+    "@ngrx/router-store": "^4.1.1",
+    "@ngrx/store": "^4.1.1",
+    "@ngrx/store-devtools": "4.0.0",
+    "@nrwl/nx": "0.6.19",
     "core-js": "^2.4.1",
     "rxjs": "^5.5.2",
-    "zone.js": "^0.8.14",
-    "@nrwl/nx": "0.6.19",
-    "@ngrx/effects": "4.1.1",
-    "@ngrx/router-store": "4.1.1",
-    "@ngrx/store": "4.1.1",
-    "@ngrx/store-devtools": "4.0.0"
+    "zone.js": "^0.8.14"
   },
   "devDependencies": {
     "@angular/cli": "file:.angular_cli.tgz",
