--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "@angular/cli": "file:.angular_cli.tgz",
     "@angular/compiler-cli": "5.1.0",
     "@angular/language-service": "5.1.0",
-    "@nrwl/schematics": "0.6.19",
+    "@nrwl/schematics": "^0.11.1",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
