--- a/package.json
+++ b/package.json
@@ -7,62 +7,63 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
-    "lint": "ng lint",
+    "lint": "./node_modules/.bin/nx lint && ng lint",
     "e2e": "ng e2e",
-    "apps:affected": "./node_modules/.bin/nx affected apps",
-    "build:affected": "./node_modules/.bin/nx affected build",
-    "e2e:affected": "./node_modules/.bin/nx affected e2e",
     "affected:apps": "./node_modules/.bin/nx affected apps",
     "affected:build": "./node_modules/.bin/nx affected build",
     "affected:e2e": "./node_modules/.bin/nx affected e2e",
     "format": "./node_modules/.bin/nx format write",
     "format:write": "./node_modules/.bin/nx format write",
     "format:check": "./node_modules/.bin/nx format check",
-    "nx-migrate": "./node_modules/.bin/nx migrate"
+    "postinstall": "./node_modules/.bin/nx postinstall",
+    "update": "./node_modules/.bin/nx update",
+    "update:check": "./node_modules/.bin/nx update check",
+    "update:skip": "./node_modules/.bin/nx update skip",
+    "dep-graph": "./node_modules/.bin/nx dep-graph",
+    "affected:dep-graph": "./node_modules/.bin/nx affected dep-graph",
+    "workspace-schematic": "./node_modules/.bin/nx workspace-schematic"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.1.0",
+    "@angular/animations": "5.2.7",
     "@angular/cdk": "^5.2.4",
-    "@angular/common": "5.1.0",
-    "@angular/compiler": "5.1.0",
-    "@angular/core": "5.1.0",
-    "@angular/forms": "5.1.0",
+    "@angular/common": "5.2.7",
+    "@angular/compiler": "5.2.7",
+    "@angular/core": "5.2.7",
+    "@angular/forms": "5.2.7",
     "@angular/material": "^5.2.4",
-    "@angular/platform-browser": "5.1.0",
-    "@angular/platform-browser-dynamic": "5.1.0",
-    "@angular/router": "5.1.0",
-    "@ngrx/effects": "4.1.1",
-    "@ngrx/router-store": "^4.1.1",
-    "@ngrx/store": "^4.1.1",
-    "@ngrx/store-devtools": "4.0.0",
+    "@angular/platform-browser": "5.2.7",
+    "@angular/platform-browser-dynamic": "5.2.7",
+    "@angular/router": "5.2.7",
+    "@ngrx/effects": "5.1.0",
+    "@ngrx/router-store": "5.0.1",
+    "@ngrx/store": "5.1.0",
+    "@ngrx/store-devtools": "5.1.0",
     "@nrwl/nx": "0.6.19",
     "core-js": "^2.4.1",
-    "rxjs": "^5.5.2",
-    "zone.js": "^0.8.14"
+    "rxjs": "^5.5.6",
+    "zone.js": "^0.8.19"
   },
   "devDependencies": {
-    "@angular-devkit/core": "^0.0.28",
-    "@angular/cli": "file:.angular_cli.tgz",
-    "@angular/compiler-cli": "5.1.0",
-    "@angular/language-service": "5.1.0",
+    "@angular/cli": "1.7.1",
+    "@angular/compiler-cli": "5.2.7",
+    "@angular/language-service": "5.2.7",
     "@nrwl/schematics": "^0.11.1",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
     "codelyzer": "^4.0.1",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~1.7.0",
-    "karma-chrome-launcher": "~2.1.1",
-    "karma-cli": "~1.0.1",
+    "jasmine-core": "~2.8.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~2.0.0",
+    "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "prettier": "1.10.2",
     "protractor": "~5.1.2",
-    "ts-node": "~3.2.0",
-    "tslint": "~5.7.0",
-    "typescript": "2.5.3"
+    "ts-node": "~4.1.0",
+    "tslint": "~5.9.1",
+    "typescript": "2.6.2"
   }
 }
