--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "@ngrx/router-store": "5.0.1",
     "@ngrx/store": "5.1.0",
     "@ngrx/store-devtools": "5.1.0",
-    "@nrwl/nx": "0.6.19",
     "core-js": "^2.4.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19",
@@ -52,6 +51,7 @@
     "@angular/cli": "1.7.1",
     "@angular/compiler-cli": "5.2.7",
     "@angular/language-service": "5.2.7",
+    "@nrwl/nx": "^0.11.1",
     "@nrwl/schematics": "^0.11.1",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
